<?xml version="1.0"?>
<package format="2">
  <name>mpc</name>
  <version>0.0.0</version>
  <description>Package for Model Predictive Control</description>

  <maintainer email="afb2001@wildcats.unh.edu">Alex Brown</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>geometry_msgs</depend>
  <depend>geographic_msgs</depend>
  <depend>marine_msgs</depend>
  <depend>roscpp</depend>
  <depend>rosbag</depend>
  <depend>project11</depend>
  <depend>path_planner_common</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>project11_transformations</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
